[development] Auto commit on 2025-12-09 09:49:06 | Files: src/main/java/com/emenu/features/product/repository/CategoryRepository.java src/main/java/com/emenu/features/product/repository/ProductPromotionRepository.java src/main/java/com/emenu/security/SecurityConfig.java